--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <h3>UENP</h3>
                     <img src="images/logo-uenp.png" alt="Image 8">
                 </a>
-                <a href="https://cri.uenp.edu.br/index.php/pfi">
+                <a href="https://cri.uenp.edu.br/index.php/pfi" target="_blank">
                     <h3>Paraná Fala Idiomas</h3>
                     <img src="images/logo-pfi.png" alt="Image 9">
                 </a>
